GitHub actions fix deploy task definition

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ env:
   ECR_REPOSITORY: eloquent-ai-app
   ECS_SERVICE: eloquent-ai-app-service
   ECS_CLUSTER: eloquent-ai-app-cluster
+  ECS_TASK_DEFINITION: eloquent-ai-app
   CONTAINER_NAME: eloquent-ai-app
 
 jobs:
@@ -145,7 +146,7 @@ jobs:
       - name: Download task definition
         run: |
           aws ecs describe-task-definition \
-            --task-definition ${{ env.ECS_CLUSTER }} \
+            --task-definition ${{ env.ECS_TASK_DEFINITION }} \
             --query taskDefinition > task-definition.json
 
       - name: Fill in the new image ID in the Amazon ECS task definition
