--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,6 +79,8 @@ jobs:
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
+    outputs:
+      image: ${{ steps.build-image.outputs.image }}
     
     steps:
       - name: Checkout code
@@ -128,9 +130,8 @@ jobs:
     needs: build-and-push
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
-    environment: 
-      name: production
-      url: https://${{ steps.get-alb-url.outputs.alb_dns }}
+    env:
+      IMAGE: ${{ needs.build-and-push.outputs.image }}
     
     steps:
       - name: Checkout code
@@ -155,7 +156,7 @@ jobs:
         with:
           task-definition: task-definition.json
           container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ steps.build-image.outputs.image }}
+          image: ${{ env.IMAGE }}
 
       - name: Deploy Amazon ECS task definition
         id: deploy-ecs
