Terraform Change to terraform work in actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,9 @@ jobs:
   terraform-plan:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/master')
+    env:
+      TF_INPUT: false
+      TF_IN_AUTOMATION: true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -94,6 +97,9 @@ jobs:
     needs: [test, terraform-plan]
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
+    env:
+      TF_INPUT: false
+      TF_IN_AUTOMATION: true
     
     steps:
       - name: Checkout code
